<?xml version="1.0"?>
<package format="3">
    <name>lio_msgs</name>
    <version>0.0.0</version>
    <description>Custom messages for lio project</description>

    <maintainer email="you@example.com">you</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>

    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>
</package>